--- a/webapps/4104029026/indexold/jsp/formpractice3.html
+++ b/webapps/4104029026/indexold/jsp/formpractice3.html
@@ -69,6 +69,7 @@
 
 				objNode.appendChild(tableform);
 				tableform.appendChild(tr);
+				var td = document.createElement("td");
 				tr.appendChild(th);
 				tr.appendChild(th2);
 				tr.appendChild(th3);
