--- a/webapps/4104029026/index.html
+++ b/webapps/4104029026/index.html
@@ -16,7 +16,7 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="indexold/indexold.html">old page</a></li>
-				<li><a href="502homework/index.html">5/02作業繳交</a></li>
+				<li><a href="502homework/index.jsp">5/02作業繳交</a></li>
 				<li><a href="425homework/index.html">4/25作業繳交</a></li>
 				<li><a href="416homework/gameinfo.html">4/16作業繳交</a></li>
 				<!--<li><a href="generic.html">Generic</a></li>
